fix: BLOG-47 aligned links section and credentials cections in footer for @tabletwidth+

--- a/static/scss/blocks/_footer.scss
+++ b/static/scss/blocks/_footer.scss
@@ -151,4 +151,11 @@
       }
     }
   }
+  .row.footer__row {
+    .footer__col.col-lg-3 {
+      flex: 0 0 200px;
+      max-width: 30%;
+   }
+  }
 }
+
